// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  overflow: hidden;
  height: 0;
  -webkit-transition: height 0.25s ease-in-out;
  transition: height 0.25s ease-in-out;
  padding-left: 10rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

<form
  className="c0"
/>
`;

exports[`renders correctly when it is expanded 1`] = `
.c0 {
  overflow: hidden;
  height: 12rem;
  -webkit-transition: height 0.25s ease-in-out;
  transition: height 0.25s ease-in-out;
  padding-left: 10rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

<form
  className="c0"
/>
`;
